--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </frameset>
 
 <noframes>
-<body>Your browser does not handle frames! Pls visit <a href="index_l.htm" tppabs="/index_l.htm">here</a>.</body>
+<body>Your browser does not handle frames! Pls visit <a href="index_l.html" tppabs="index_l.html">here</a>.</body>
 </noframes>
 
 
