--- a/index2.html
+++ b/index2.html
@@ -7,12 +7,12 @@
 
 <frameset cols="180,*" border=0>
 
-  <frame src="index_l.htm" tppabs="https://xbeta.info/studytc/index_l.htm">
-  <frame src="tc000.htm" tppabs="https://xbeta.info/studytc/tc000.htm" name="showframe">
+  <frame src="index_l.htm" tppabs="index_l.htm">
+  <frame src="tc000.htm" tppabs="tc000.htm" name="showframe">
 </frameset>
 
 <noframes>
-<body>Your browser does not handle frames! Pls visit <a href="index_l.htm" tppabs="/index_l.htm">here</a>.</body>
+<body>Your browser does not handle frames! Pls visit <a href="index_l.htm" tppabs="index_l.htm">here</a>.</body>
 </noframes>
 
 
