--- a/index_l.html
+++ b/index_l.html
@@ -13,19 +13,19 @@
 	</style>
 </head>
 <body>
-<a href="javascript:if(confirm('http://xbeta.info/  \n\n?????????? Teleport Ultra ????, ??? ??????????·???????????????????????????  \n\n?????????????????'))window.location='http://xbeta.info/'" tppabs="http://xbeta.info/" target="_blank">返回 善用佳软</a>
+<a href="javascript:if(confirm('http://xbeta.info/  \n\n?))window.location='http://xbeta.info/'" tppabs="http://xbeta.info/" target="_blank">返回 善用佳软</a>
 
 <h1>TC学堂<br/>
 ——最易读的Total Commander教程</h1>
 　　　　xbeta，2007-2009<br/>
 <hr/>
 <br/>
-<a href="tc00a.htm" tppabs="https://xbeta.info/studytc/tc00a.htm" target ="showframe">2009序 <span style="color:red;">新</span></a><br>
-<a href="tc000.htm" tppabs="https://xbeta.info/studytc/tc000.htm" target ="showframe">序: 开始TC之旅</a><br>
-<a href="tc001.htm" tppabs="https://xbeta.info/studytc/tc001.htm" target ="showframe">1. 初识TC <span style="color:red;">更新</span></a><br>
-<a href="tc002.htm" tppabs="https://xbeta.info/studytc/tc002.htm" target ="showframe">2. TC基本功－定位与选择</a><br>
-　<a href="tc013.htm" tppabs="https://xbeta.info/studytc/tc013.htm" target ="showframe">标签(Tab)及快捷键 <span style="color:red;">新</span></a><br>
-<a href="tc003.htm" tppabs="https://xbeta.info/studytc/tc003.htm" target ="showframe">3. 压缩及插件</a><br>
+<a href="tc00a.html" tppabs="https://xbeta.info/studytc/tc00a.htm" target ="showframe">2009序 <span style="color:red;">新</span></a><br>
+<a href="tc000.html" tppabs="https://xbeta.info/studytc/tc000.htm" target ="showframe">序: 开始TC之旅</a><br>
+<a href="tc001.html" tppabs="https://xbeta.info/studytc/tc001.htm" target ="showframe">1. 初识TC <span style="color:red;">更新</span></a><br>
+<a href="tc002.html" tppabs="https://xbeta.info/studytc/tc002.htm" target ="showframe">2. TC基本功－定位与选择</a><br>
+　<a href="tc013.html" tppabs="https://xbeta.info/studytc/tc013.htm" target ="showframe">标签(Tab)及快捷键 <span style="color:red;">新</span></a><br>
+<a href="tc003.html" tppabs="https://xbeta.info/studytc/tc003.htm" target ="showframe">3. 压缩及插件</a><br>
 <a href="tc004.htm" tppabs="https://xbeta.info/studytc/tc004.htm" target ="showframe">4. 搜索与批量改名</a><br>
 <a href="tc005.htm" tppabs="https://xbeta.info/studytc/tc005.htm" target ="showframe">5. 文件(夹)比较与同步</a><br>
 <a href="tc006.htm" tppabs="https://xbeta.info/studytc/tc006.htm" target ="showframe">6. 文件系统插件</a><br>
