--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 
 <frameset cols="180,*" border=0>
 
-  <frame src="index_l.htm" tppabs="/index_l.htm">
-  <frame src="tc000.htm" tppabs="/tc000.htm" name="showframe">
+  <frame src="index_l.html" tppabs="/index_l.htm">
+  <frame src="tc000.html" tppabs="/tc000.htm" name="showframe">
 </frameset>
 
 <noframes>
