--- a/tz.html
+++ b/tz.html
@@ -16815,3 +16815,62 @@
       * 日本  
       * 韩国  
       > 正确答案为：`中国`
+集团公司第18次领导班子。。 （反脆弱）
+
+集团公司第18次领导班子，是我们关心关爱员工的平台（绩效面谈）
+
+第四届中国国际进口博览会。。（13）
+
+2025年 光伏发电装机达到。。（8000）
+
+山东海阳等。。第一个在国内用核能。。（清洁供暖）
+
+文化大革命。。（改革开放）
+
+一流总部 建设考核是检验。。重要评判（标准）
+
+除执行境外项目和涉外经贸项目相关任务的团组外，原则上出访一个国家或地区不得超过_____天，出访两个国家或地区不得超过_____天，出访三个国家或地区不得超过_____天。赴非洲、拉美等航班衔接不便的国家，可酌情增加_____天。(5,8,10,1)
+
+2021年第3次党组（扩大）会指出，创新中心要坚持_____导向，以实现_____作为最重要的标准。（B、结果；价值）
+
+第四届中国国际进口博览会实现展会场景下数字人民币支付全覆盖，提供数字人民币一站式消费支付体验；场馆内5G通信也将全面提速扩容，提供更为丰富的移动化、智能化、个性化便利服务，全面打造（“智慧进博”）
+
+2020年，集团公司年发电量为5800亿度电，超过______全国年发电量5718亿度电。(不是 B、英国 不是法国 )
+
+五年来，国家电投光伏装机增长了________倍，超过________万千瓦，连续________年位居全球首位，已成为全球最大的新能源发电企业。（6，3500，5）
+
+到2025年，国家电投将建成一大批惠及千万用户、生态环境友好的先进示范型________项目，与更多国家共享清洁低碳的国家电投解决方案，为美丽地球守护更多绿水青山。（10分）B、“光伏＋”
+
+黄河公司。。。（5）周年
+
+1923年6月，毛泽东在广州出席了中国共产党党史上具有重大历史意义的______，在会上当选为中央执行委员会委员、中央局秘书，成为负责中央日常工作的三名成员之一。（1分）中共三大
+
+集团公司2021年第三次党组（扩大）会提出，要把_________作为国家电投从投资驱动向创新驱动转变的最重要抓手。（1分）*（“大用户”开发）
+
+集团公司2021年第三次党组（扩大）会提出，集团公司内部转型发展要从投资驱动向 转变（创新驱动）
+
+各单位要高度重视、坚持“_________”原则，认真做好“综合智慧能源管控与服务平台和综合智慧能源信息服务平台”推广应用工作。（1分）应用尽用
+
+集团公司2021年第三次党组（扩大）会要求，要结合“保供”要求，做好_________工作。（煤炭资产优化）
+
+集团公司2021年第4次党组（扩大）会要求，一流总部建设考核是检验事情做的好坏的重要评判（标准）
+
+要把（）作为一流总部建设的重要内容（考核）
+
+集团公司2021年第4次党组（扩大）会要求，核心价值确定了，落到制度六厂商，就是（规范运作）
+
+创新中心独立设置的目的是为了（专业化管理）
+
+中国革命具有决定意义的新起点是（从进攻大城市转到向农村进军）
+
+永攀世界一流光伏产业新高峰是我们全集团工作的（重心）
+
+坚持依法治国首先要坚持（依宪治国）
+
+我国法治最大区别是（中国共产党的领导）
+
+要严格实行党政领导干部（安全生产工作责任制），切实做到失职追责。
+
+全面依法治国最广泛最深厚的基础是（人民）
+
+民典法规定，处理民事纠纷，法律没有规定的，可以适用（习惯）
